# HelloTriangleDX

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Collider.cpp  Collider.h  D3D12MemAlloc.cpp  D3D12MemAlloc.h  D3D12Renderer.cpp  D3D12Renderer.h  DXSample.cpp  DXSample.h  DXSampleHelper.h  DescriptorHeapListAllocator.h  Game.cpp  Game.h  GpuBuffer.h  HeapDescriptor.h  HelloTriangleDX.sln  HelloTriangleDX.vcxproj  HelloTriangleDX.vcxproj.filters  ImguiPS.hlsl  ImguiVS.hlsl  Input.cpp  Input.h  Main.cpp  Mesh.cpp  Mesh.h  PS.hlsl  README.md  Renderer.cpp  Renderer.h  RendererHelper.h  StepTimer.h  Terrain.cpp  Terrain.h  (+10 more)
.github/workflows/: build.yml
IssouRHI/: AccelerationStructure.cpp  Buffer.cpp  CMakeLists.txt  CommandEncoder.cpp  DescriptorHeap.cpp  Device.cpp  Pipeline.cpp  QuerySet.cpp  Queue.cpp  README.md  ShaderTable.cpp  Surface.cpp  Texture.cpp  Utils.cpp  Utils.h
IssouRHI/D3D12/: AccelerationStructureD3D12.cpp  AccelerationStructureD3D12.h  BufferD3D12.cpp  BufferD3D12.h  CommandEncoderD3D12.cpp  CommandEncoderD3D12.h  CommonD3D12.h  DescriptorHeapD3D12.cpp  DescriptorHeapD3D12.h  DeviceD3D12.cpp  DeviceD3D12.h  InteropD3D12.cpp  PipelineD3D12.cpp  PipelineD3D12.h  QuerySetD3D12.cpp  QuerySetD3D12.h  QueueD3D12.cpp  QueueD3D12.h  ShaderTableD3D12.cpp  ShaderTableD3D12.h  SurfaceD3D12.cpp  SurfaceD3D12.h  TextureD3D12.cpp  TextureD3D12.h  UtilsD3D12.cpp  UtilsD3D12.h
IssouRHI/include/: InteropD3D12.h  IssouRHI.h
assets/: gltf.py  mesh.py  obj.py  raw.py
shaders/: Common.hlsli  DefaultPS.hlsl  DefaultSkinnedVS.hlsl  DefaultVS.hlsl  FillGBuffer.cs.hlsl  FillGBufferCS.hlsl  FinalCompose.ps.hlsl  FinalComposePS.hlsl  FullScreenTriangleVS.hlsl  InstanceCulling.cs.hlsl  InstanceCullingCS.hlsl  Meshlet.as.hlsl  Meshlet.ms.hlsl  Meshlet.ps.hlsl  MeshletAS.hlsl  MeshletCommon.hlsli  MeshletMS.hlsl  MeshletPS.hlsl  RayTracing.rahit.hlsl  RayTracing.rgen.hlsl  RayTracing.rmiss.hlsl  RayTracing.rt.hlsl  RayTracingRT.hlsl  Shared.h  Skinning.cs.hlsl  SkinningCS.hlsl  VisibilityBufferCommon.hlsli
